Add Port folio website

--- a/index.html
+++ b/index.html
@@ -2,36 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Hi, I'm Nishanthini</h1>
-    <p>Cloud & DevOps Enthusiast</p>
+    <h1>My Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am passionate about cloud technologies, DevOps tools, and automation.</p>
+    <p>Hello! I am a web developer passionate about building websites.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <ul>
-      <li>🔹 Portfolio Website (this one!)</li>
-      <li>🔹 AWS Deployment Demo (Coming soon)</li>
-    </ul>
+    <p>Here are some of my projects.</p>
+    <h3>Atudent Grade Calculator</h3>
+    <h3>Medical Report Analyzer</h3>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: youremail@example.com</p>
+    <p>Email: myemail@example.com</p>
   </section>
-
-  <footer>
-    <p>&copy; 2025 Nishanthini</p>
-  </footer>
 </body>
 </html>
