--- a/index.html
+++ b/index.html
@@ -3,45 +3,69 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Nishanthini - Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>My Portfolio</h1>
-    <nav>
+  <div class="container">
+    <header>
+      <h1>Nishanthini</h1>
+      <p>BCA Final Year Student | Cloud & DevOps Enthusiast</p>
+      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a> | GitHub: <a href="https://github.com/Nishanthini9905" target="_blank">Nishanthini9905</a></p>
+    </header>
+
+    <section>
+      <h2>Career Objective</h2>
+      <p>To obtain a challenging position in the IT industry where I can apply my knowledge of cloud technologies, development skills, and creativity to contribute to organizational goals while enhancing my personal growth.</p>
+    </section>
+
+    <section>
+      <h2>Education</h2>
       <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><strong>BCA</strong>, Dr. NGP Arts and Science College (Bharathiar University) – 81.7%</li>
+        <li><strong>HSC II</strong>, Venkatalakshmi MHSS – 75.3%</li>
+        <li><strong>HSC I</strong>, Venkatalakshmi MHSS – 68%</li>
       </ul>
-    </nav>
-  </header>
+    </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I am a web developer passionate about building websites.</p>
-  </section>
+    <section>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li>Languages: C, Java, Python, SQL</li>
+        <li>Web: HTML, CSS, GitHub Pages</li>
+        <li>Cloud: AWS S3, Git, DevOps Basics</li>
+        <li>Tools: Visual Studio Code, GitHub</li>
+      </ul>
+    </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Static Resume Builder</strong> – Deployed on GitHub Pages</li>
+        <li><strong>Cloud Storage & File Upload App</strong> – Using AWS S3</li>
+      </ul>
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>Here are some of my projects.</p>
-    <h3>Atudent Grade Calculator</h3>
-    <h3>Medical Report Analyzer</h3>
-  </section>
+    <section>
+      <h2>Internships & Events</h2>
+      <ul>
+        <li>Internship at Litz Infotech – Created a registration form using HTML & CSS</li>
+        <li>Presented Paper: "Crop Prediction using Supervised Learning"</li>
+        <li>Attended: 2nd International Conference at KPR College</li>
+      </ul>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: myemail@example.com</p>
-  </section>
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>Cloud Foundations – AWS Academy</li>
+        <li>DevOps Basics – Coursera / Other (update as needed)</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Nishanthini | Built with HTML & CSS</p>
+    </footer>
+  </div>
 </body>
 </html>
